tests/errors/lifetime/reborrow/access_x_while_reborrow_live_conflicts.sim

        extern fn sink(r: &mut i64);
        fn f(x: i64) {
          r: &mut i64;
          s: &mut i64;
          entry:
            r = &mut x;
            s = &mut r.*;
            x = 1;
            call sink(move s);
            return
        }
        